--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.19.2",
     "nodemon": "^3.1.4",
     "pg": "^8.12.0",
+    "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.23.0"
   }
 }
