--- a/.env
+++ b/.env
@@ -2,5 +2,6 @@ DB_USER=postgres
 DB_HOST=localhost
 DB_NAME=fixcareback
 DB_PASSWORD=ds564
-DB_PORT=7777
+DB_PORT=5432
 PORT=4000
+GROUPID=120363327750555481@g.us
