--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "moment-timezone": "^0.5.46",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.4",
     "pg": "^8.12.0",
     "qrcode-terminal": "^0.12.0",
